Bugfix the right way card backface-visibility issue on Chrome

--- a/src/not-alone/card.scss
+++ b/src/not-alone/card.scss
@@ -16,9 +16,10 @@
     border-radius: $border-radius;
     filter: drop-shadow($card-border $card-border $card-border black);
     background-size: cover;
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
 
     &.back:not(:only-child) {
-      backface-visibility: hidden;
       transform: rotateY(-180deg);
     }
   }
